--- a/.github/workflows/stackoverflow-workflow.yml
+++ b/.github/workflows/stackoverflow-workflow.yml
@@ -16,3 +16,4 @@ jobs:
           comment_tag_name: "STACKOVERFLOW"
           commit_message: "Updated readme with the latest stackOverflow data"
           feed_list: "https://stackoverflow.com/feeds/user/12210908"
+          max_post_count: 5
