--- a/.github/workflows/stackoverflow-workflow.yml
+++ b/.github/workflows/stackoverflow-workflow.yml
@@ -2,7 +2,7 @@ name: Latest Stack Overflow Activity
 on:
   schedule:
     # Runs every 5 minutes
-    - cron: '*/5 * * * *'
+    - cron: '0 0 * * *'
   workflow_dispatch:
   
 jobs:
