--- a/.github/workflows/stackoverflow-workflow.yml
+++ b/.github/workflows/stackoverflow-workflow.yml
@@ -1,7 +1,7 @@
 name: Latest Stack Overflow Activity
 on:
   schedule:
-    # Runs every 5 minutes
+    # Runs at 00:00 midnight everyday
     - cron: '0 0 * * *'
   workflow_dispatch:
   
