--- a/.github/workflows/git-contribution-snake-gamification.yml
+++ b/.github/workflows/git-contribution-snake-gamification.yml
@@ -25,9 +25,9 @@ jobs:
         with:
             github_user_name: strikersps
             outputs: |
-              dist/github-snake.svg
-              dist/github-snake-dark.svg?palette=github-dark
-              dist/ocean.gif?color_snake=orange&color_dots=#bfd6f6,#8dbdff,#64a1f4,#4b91f1,#3c7dd9
+              github-snake.svg
+              github-snake-dark.svg?palette=github-dark
+              ocean.gif?color_snake=orange&color_dots=#bfd6f6,#8dbdff,#64a1f4,#4b91f1,#3c7dd9
         env:
             GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
@@ -37,6 +37,5 @@ jobs:
         uses: crazy-max/ghaction-github-pages@v2.5.0
         with:
           target_branch: snake_game_output
-          build_dir: dist
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
