--- a/.github/workflows/git-contribution-snake-gamification.yml
+++ b/.github/workflows/git-contribution-snake-gamification.yml
@@ -1,14 +1,14 @@
 name: Generate Snake Animation From GitHub Contributions Graph
 
 on:
-  # run automatically every hour
+  # Run automatically every hour
   schedule:
     - cron: '0 */1 * * *'
   
-  # allows to manually run the job at any time
+  # Allows to manually run the job at any time
   workflow_dispatch:
   
-  # run on every push on the master branch
+  # Run on every push on the master branch
   push:
     branches:
     - main
@@ -19,15 +19,15 @@ jobs:
     timeout-minutes: 10
 
     steps:
-      # generates a snake game from a github user strikersps contributions graph, output a svg animation at path .
+      # Generates a snake game from a github user strikersps contributions graph, output a svg animation at path .
       - name: generate github-contribution-grid-snake.svg
         uses: Platane/snk@master
         with:
             github_user_name: strikersps
             outputs: |
-              github-snake.svg
-              github-snake-dark.svg?palette=github-dark
-              ocean.gif?color_snake=orange&color_dots=#bfd6f6,#8dbdff,#64a1f4,#4b91f1,#3c7dd9
+              assets/github-snake.svg
+              assets/github-snake-dark.svg?palette=github-dark
+              assets/ocean.gif?color_snake=orange&color_dots=#bfd6f6,#8dbdff,#64a1f4,#4b91f1,#3c7dd9
         env:
             GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
@@ -37,6 +37,6 @@ jobs:
         uses: crazy-max/ghaction-github-pages@v2.5.0
         with:
           target_branch: snake_game_output
-          build_dir: dist
+          build_dir: assets
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
