--- a/.github/workflows/git-contribution-snake-gamification.yml
+++ b/.github/workflows/git-contribution-snake-gamification.yml
@@ -21,7 +21,7 @@ jobs:
     steps:
       # Generates a snake game from a github user strikersps contributions graph, output a svg animation at path .
       - name: generate github-contribution-grid-snake.svg
-        uses: Platane/snk@master
+        uses: Platane/snk/svg-only@v3
         with:
             github_user_name: strikersps
             outputs: |
