--- a/.github/workflows/git-contribution-snake-gamification.yml
+++ b/.github/workflows/git-contribution-snake-gamification.yml
@@ -25,10 +25,19 @@ jobs:
         uses: Platane/snk@v3
         with:
             github_user_name: strikersps
+    # list of files to generate.
+    # one file per line. Each output can be customized with options as query string.
+    #
+    #  supported options:
+    #  - palette:     A preset of color, one of [github, github-dark, github-light]
+    #  - color_snake: Color of the snake
+    #  - color_dots:  Coma separated list of dots color.
+    #                 The first one is 0 contribution, then it goes from the low contribution to the highest.
+    #                 Exactly 5 colors are expected.
             outputs: |
               dist/github-contribution-snake-game.svg
               dist/github-contibution-snake-game.svg?palette=github-dark
-              dist/github-contribution-snake-game.gif?color_snake=red
+              dist/github-contribution-snake-game.svg?pallete=github-light&color_snake=red
         env:
             GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
