--- a/.github/workflows/stackoverflow-workflow.yml
+++ b/.github/workflows/stackoverflow-workflow.yml
@@ -10,8 +10,8 @@ jobs:
     name: Update this repo's README with latest activity from StackOverflow
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
-      - uses: gautamkrishnar/blog-post-workflow@master
+      - uses: actions/checkout@v3
+      - uses: gautamkrishnar/blog-post-workflow@v1
         with:
           comment_tag_name: "STACKOVERFLOW"
           commit_message: "Updated readme.md file with the latest Stack Overflow data for the user 12210908"
